# frida-analysis

./: discoverer.js  discoverer.py  dwarf.md  dwarf.py
dwarf-parsing/: Cargo.toml
dwarf-parsing/src/: discoverer.rs  dwarf.rs  json.rs  lib.rs  module_map.rs  parsing.rs  symbols.rs
ghidra_scripts/: .gitignore  function_signatures.py  instruction_localizer.py  utils.py
utils/: hexdump_to_base64.py  sizes.py  struct_size_properties.c
