[package]
name = "dwarf-parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cpp_demangle = "0.4.4"
gimli = "0.31.1"
indexmap = { version = "2.9.0", features = ["serde"] }
itertools = "0.14.0"
memmap2 = "0.9.5"
object = "0.36.7"
ouroboros = "0.18.5"
serde = { version = "1.0.219", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.140"
